--- a/FuncGodot Manual/pages/guide_map_editor_config.html
+++ b/FuncGodot Manual/pages/guide_map_editor_config.html
@@ -32,18 +32,18 @@
             along with a few other features. FuncGodot comes with a few pre-made common tags. Feel free to use them in your own GameConfig resources.
         </p>
         <p>
-            Exporting the Game Config will use the directory set in your <a href="setup_project_config.html" target="_self">Project Configuration's <i>Trenchbroom Game Config Folder</i></a>. 
+            Exporting the Game Config will use the directory set in your <a href="guide_project_config.html" target="_self">Project Configuration's <i>Trenchbroom Game Config Folder</i></a>. 
             Consult the <a href="https://trenchbroom.github.io/manual/latest/#game_configuration_files" target="_blank">TrenchBroom Manual's Game Configuration documentation</a> for 
             more information. Once you've exported your Game Config, open up TrenchBroom and click <i>New Map</i>. You should now see your project in the games list.
         </p>
-        <p align="center"><img src="../images/setup_me_tb_cfg_2.png" alt="TrenchBroom Config 2"></p>
+        <p align="center"><img src="../images/guide_me_tb_cfg_2.png" alt="TrenchBroom Config 2"></p>
         <p>
             You'll need to set the game path so that TrenchBroom can find your game's textures and any models if you created some for it. Open TrenchBroom's preferences 
             and set your game's path to the one you set to <i>Map Editor Game Path</i> with the Project Configuration.
         </p>
-        <p align="center"><img src="../images/setup_me_tb_cfg_3.png" alt="TrenchBroom Config 3"></p>
+        <p align="center"><img src="../images/guide_me_tb_cfg_3.png" alt="TrenchBroom Config 3"></p>
         <p>Now you should be ready to start mapping for Godot with TrenchBroom!</p>
-        <p align="center"><img src="../images/setup_me_tb_cfg_4.png" alt="TrenchBroom Config 3" width="50%"></p>
+        <p align="center"><img src="../images/guide_me_tb_cfg_4.png" alt="TrenchBroom Config 3" width="50%"></p>
         <br><br>
 
         <h2 id="JACK" align="center"><a href="https://crystice.com/jack/" target="_blank">J.A.C.K.</a></h2>
@@ -53,11 +53,11 @@
             Make sure your Project Configuration's <i>FGD Output Folder</i> is pointing to your game's folder in the J.A.C.K.'s game configuration folder. 
             When you export an FGD file, FuncGodot will print in the Godot Output where it was saved to.
         </p>
-        <p align="center"><img src="../images/setup_me_jack_0.png" alt="J.A.C.K. Config 1"></p>
+        <p align="center"><img src="../images/guide_me_jack_0.png" alt="J.A.C.K. Config 1"></p>
         <p>Once exported, you'll need to add your game to the Game Configurations list. Be sure to add your newly exported FGD as well.</p>
-        <p align="center"><img src="../images/setup_me_jack_1.png" alt="J.A.C.K. Config 2" height="600px"> <img src="../images/setup_me_jack_2.png" alt="J.A.C.K. Config 3" height="600px"></p>
+        <p align="center"><img src="../images/guide_me_jack_1.png" alt="J.A.C.K. Config 2" height="600px"> <img src="../images/guide_me_jack_2.png" alt="J.A.C.K. Config 3" height="600px"></p>
         <p>Lastly you'll want to set your Base Game and Source Maps directories.</p>
-        <p align="center"><img src="../images/setup_me_jack_3.png" alt="J.A.C.K. Config 4" height="600px"></p>
+        <p align="center"><img src="../images/guide_me_jack_3.png" alt="J.A.C.K. Config 4" height="600px"></p>
         <p>
             When it comes to textures, something to keep in mind is that you do not have to use the same exact texture files from your project. You can set up 
             a WAD file for use with J.A.C.K. but then in your Godot project have loose texture files and premade materials. As long as the relative texture paths match 
@@ -65,7 +65,7 @@
             That said, FuncGodot <i>does</i> support using WAD files with your maps. Use whichever method is right for your project.
         </p>
         <p>And with that, you should be all set to start mapping in J.A.C.K.!</p>
-        <p align="center"><img src="../images/setup_me_jack_4.png" alt="J.A.C.K. Config 5" width="75%"></p>
+        <p align="center"><img src="../images/guide_me_jack_4.png" alt="J.A.C.K. Config 5" width="75%"></p>
         <br><br>
 
         <h2 id="NetRadiantCustom" align="center"><a href="https://github.com/Garux/netradiant-custom" target="_blank">NetRadiant Custom</a></h2>
@@ -108,22 +108,22 @@
         </p>
         <p>
             Exporting the Gamepack Config will use the directory set in your 
-            <a href="setup_project_config.html" target="_self">Project Configuration's <i>NetRadiant Custom Gamepacks Folder</i></a>. 
+            <a href="guide_project_config.html" target="_self">Project Configuration's <i>NetRadiant Custom Gamepacks Folder</i></a>. 
             After you've built the gamepack, open up NetRadiant Custom.
         </p>
         <p>
             Once open, you'll want to go to <b><i>Edit > Preferences > Global > Game</i></b>. If you did everything correctly so far you should find your game in the list. 
             Select it and then select <b>Okay</b>. NetRadiant Custom will need to restart.
         </p>
-        <p align="center"><img src="../images/setup_me_nrc_1.png" alt="NetRadiant Custom setup 1"></p>
+        <p align="center"><img src="../images/guide_me_nrc_1.png" alt="NetRadiant Custom setup 1"></p>
         <p>
             You'll be prompted to find your game's engine path. Use your Godot project's root folder.
         </p>
-        <p align="center"><img src="../images/setup_me_nrc_2.png" alt="NetRadiant Custom setup 2"></p>
+        <p align="center"><img src="../images/guide_me_nrc_2.png" alt="NetRadiant Custom setup 2"></p>
         <p>
             Now you should be ready to start mapping for Godot with NetRadiant Custom!
         </p>
-        <p align="center"><img src="../images/setup_me_nrc_3.png" alt="NetRadiant Custom setup 3"></p>
+        <p align="center"><img src="../images/guide_me_nrc_3.png" alt="NetRadiant Custom setup 3"></p>
     </div>
 
     <br><br><br>
