--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -11,27 +11,32 @@
         <a href="start.html" target="main">What <i>IS</i> FuncGodot?</a><br>
         <h3 class="sidenav">Getting Started</h3>
         <p class="sidenav">
-            <a href="setup_install.html" target="main">Installing FuncGodot</a><br>
-            <a href="setup_project_config.html" target="main">Project Configuration</a><br>
-            <a href="setup_fgd.html" target="main">Forge Game Data</a><br>
-            <a href="setup_textures.html" target="main">Textures</a><br>
+            <a href="guide_install.html" target="main">Installing FuncGodot</a><br>
+            <a href="guide_project_config.html" target="main">Project Configuration</a><br>
+            <a href="guide_fgd.html" target="main">Forge Game Data</a>
         </p>
         <p class="sidenav2">
-            <a href="setup_textures.html#ClipAndSkip" target="main">Clip and Skip</a><br>
-            <a href="setup_textures.html#WADFiles" target="main">WAD Files</a><br>
-            <a href="setup_textures.html#WhyAreMyTexturesBlurry" target="main">Why Are My Textures Blurry!?</a><br>
+            <a href="guide_fgd.html#FGDFile" target="main">FGD File Resource</a><br>
+            <a href="guide_fgd.html#EntityClass" target="main">Entity Class Definitions</a><br>
+            <a href="guide_fgd.html#DefaultEntities" target="main">Default Entities</a>
         </p>
-        <p class="sidenav"><a href="setup_map_editor_config.html" target="main">Map Editor Configuration</a><br></p>
+        <p class="sidenav"><a href="guide_textures.html" target="main">Textures</a><br></p>
         <p class="sidenav2">
-            <a href="setup_map_editor_config.html#TrenchBroom" target="main">TrenchBroom</a><br>
-            <a href="setup_map_editor_config.html#JACK" target="main">J.A.C.K.</a><br>
-            <a href="setup_map_editor_config.html#NetRadiantCustom" target="main">NetRadiant Custom</a><br>
+            <a href="guide_textures.html#ClipAndSkip" target="main">Clip and Skip</a><br>
+            <a href="guide_textures.html#WADFiles" target="main">WAD Files</a><br>
+            <a href="guide_textures.html#WhyAreMyTexturesBlurry" target="main">Why Are My Textures Blurry!?</a>
         </p>
-        <p class="sidenav"><a href="setup_building_maps.html" target="main">Building Maps</a></p>
+        <p class="sidenav"><a href="guide_map_editor_config.html" target="main">Map Editor Configuration</a></p>
         <p class="sidenav2">
-            <a href="setup_building_maps.html#InverseScaleFactor" target="main">Inverse Scale Factor</a><br>
-            <a href="setup_building_maps.html#TrenchbroomHierarchy" target="main">TrenchBroom Groups Hierarchy</a><br>
-            <a href="setup_building_maps.html#Building" target="main">Building</a>
+            <a href="guide_map_editor_config.html#TrenchBroom" target="main">TrenchBroom</a><br>
+            <a href="guide_map_editor_config.html#JACK" target="main">J.A.C.K.</a><br>
+            <a href="guide_map_editor_config.html#NetRadiantCustom" target="main">NetRadiant Custom</a>
+        </p>
+        <p class="sidenav"><a href="guide_building_maps.html" target="main">Building Maps</a></p>
+        <p class="sidenav2">
+            <a href="guide_building_maps.html#InverseScaleFactor" target="main">Inverse Scale Factor</a><br>
+            <a href="guide_building_maps.html#TrenchbroomHierarchy" target="main">TrenchBroom Groups Hierarchy</a><br>
+            <a href="guide_building_maps.html#Building" target="main">Building</a>
         </p>
 
         <h3 class="sidenav">Class Reference</h3>
@@ -45,6 +50,13 @@
             <a href="ref_fgd_resources.html#Base" target="main">FuncGodot FGD Base Class</a><br>
             <a href="ref_fgd_resources.html#Solid" target="main">FuncGodot FGD Solid Class</a><br>
             <a href="ref_fgd_resources.html#Point" target="main">FuncGodot FGD Point Class</a>
+        </p>
+
+        <p class="sidenav"><a href="ref_key_value_pairs.html" target="main">Entity Key Value Pairs</a></p>
+        <p class="sidenav2">
+            <a href="ref_key_value_pairs.html#PropertyTypes" target="main">Property Types</a><br>
+            <a href="ref_key_value_pairs.html#Choices" target="main">Choices</a><br>
+            <a href="ref_key_value_pairs.html#BitFlags" target="main">Bit Flags</a>
         </p>
 
         <p class="sidenav"><a href="ref_trenchbroom_resources.html" target="main">TrenchBroom Resources</a></p>
