--- a/FuncGodot Manual/pages/guide_building_maps.html
+++ b/FuncGodot Manual/pages/guide_building_maps.html
@@ -19,7 +19,7 @@
         <p>
             After that create a <a href="ref_func_godot_map.html" target="main">FuncGodotMap</a> node as a child of this node.
         </p>
-        <p align="center"><img src="../images/setup_build_1.png" alt="Building the map 1"></p>
+        <p align="center"><img src="../images/guide_build_1.png" alt="Building the map 1"></p>
         <p>
             Why do we make the FuncGodot Map a child and not the root? When a FuncGodot Map builds its scene it frees <b><i>all</i></b> of its children, 
             including manually placed or edited nodes. Any work you did within the FuncGodot Map's branch of your Scene Tree will be erased when you rebuild 
@@ -43,9 +43,9 @@
         </p>
         <p>Lastly we have some <b>Build</b> options. You can generally leave these alone, but they can be helpful if you find yourself having unexpected problems.</p>
         <p>Let's take a quick peek at our <i>Map Settings</i>.</p>
-        <p align="center"><img src="../images/setup_build_2.png" alt="Building the map 2"></p>
+        <p align="center"><img src="../images/guide_build_2.png" alt="Building the map 2"></p>
         <p>
-            We went over most of these properties in the <a href="setup_textures.html">Textures Chapter</a>, so we'll just go over the 
+            We went over most of these properties in the <a href="guide_textures.html">Textures Chapter</a>, so we'll just go over the 
             the ones we didn't cover: <b>Inverse Scale Factor</b>, <b>Entity Fgd</b>, <b>UV Unwrap Texel Size</b>, and <b>Use Trenchbroom Groups Hierarchy</b>.
         </p>
         <p>
@@ -70,8 +70,8 @@
             Feel free to experiment with this value to find the right scale for your game.
         </p>
         <p align="center">
-            <img src="../images/setup_build_isf1.png" alt="32x32 Quake Unit Block" height="300px"> 
-            <img src="../images/setup_build_isf2.png" alt="1x1 Godot Unit Block" height="300px">
+            <img src="../images/guide_build_isf1.png" alt="32x32 Quake Unit Block" height="300px"> 
+            <img src="../images/guide_build_isf2.png" alt="1x1 Godot Unit Block" height="300px">
         </p>
         <p>
             <i>NOTE: Accounting for the Inverse Scale Factor in your class scripts will better allow you to design your entities within the map editor, i.e: 
@@ -89,11 +89,11 @@
             FuncGodot offers this option using the <b>Use Trenchbroom Groups Hierarchy</b> property.
         </p>
         <p>Let's say you created two layers and two groups of brush entities, both groups on separate layers.</p>
-        <p align="center"><img src="../images/setup_build_groups1.png" alt="TrenchBroom screenshot depicting 2 layers named Texas and Massachusetts and 2 groups of brush entities named Richardson and Arkham."></p>
+        <p align="center"><img src="../images/guide_build_groups1.png" alt="TrenchBroom screenshot depicting 2 layers named Texas and Massachusetts and 2 groups of brush entities named Richardson and Arkham."></p>
         <p align="center">If <i>Use Trenchbroom Groups Hierarchy</i> is disabled, your built FuncGodotMap scene structure will look something like this:</p>
-        <p align="center"><img src="../images/setup_build_groups2.png" alt="Scene tree showing a flat entity hierarchy"></p>
+        <p align="center"><img src="../images/guide_build_groups2.png" alt="Scene tree showing a flat entity hierarchy"></p>
         <p align="center">However, if you build your FuncGodotMap with <i>Use Trenchbroom Groups Hierarchy</i> enabled, you'll get this instead:</p>
-        <p align="center"><img src="../images/setup_build_groups3.png" alt="Scene tree showing a multi level entity hierarchy based upon the map layers and groups"></p>
+        <p align="center"><img src="../images/guide_build_groups3.png" alt="Scene tree showing a multi level entity hierarchy based upon the map layers and groups"></p>
 
         <h2 id="Building">Building</h2>
         <p>
@@ -115,7 +115,7 @@
             bake.
         </p>
         <p>Go ahead and perform a <i>Full Build</i> and marvel in your master level craftsmanship.</p>
-        <p align="center"><img src="../images/setup_build_3.png"></p>
+        <p align="center"><img src="../images/guide_build_3.png"></p>
         <p align="center">Congratulations! You've built your first FuncGodot Map!</p>
     </div>
     <br><br><br>
