--- a/FuncGodot Manual/pages/ref_project_config.html
+++ b/FuncGodot Manual/pages/ref_project_config.html
@@ -7,7 +7,64 @@
 </head>
 <body>
     <div class="main">
-        <h1>FuncGodot Project Configuration</h1>
+        <h1>FuncGodotProjectConfig</h1>
+        <p><img src="../images/ref_project_config.png"></p><br>
+
+        <p>Local machine project wide settings. Can define global defaults for some FuncGodot properties.</p>
+        <h3>DO NOT CREATE A NEW RESOURCE!</h3>
+        <p>
+            This resource works by saving a configuration file to your game's <i>user://</i> folder and pulling the properties from that config file rather than this resource. 
+            Use the premade <b><i>addons/func_godot/project_config.tres</i></b> instead.
+        </p>
+        <br>
+
+        <table>
+            <tr class="header">
+                <td>Property</td>
+                <td>Type</td>
+                <td>Description</td>
+            </tr>
+            <tr>
+                <td>Fgd Output Folder</td>
+                <td>String, Global Directory</td>
+                <td>
+                    Global directory path that FGD files save to when exported from their properties. 
+                    Overridden when exported from a game configuration resource like TrenchBroomGameConfig.
+                </td>
+            </tr>
+            <tr>
+                <td>Trenchbroom Game Config Folder</td>
+                <td>String, Global Directory</td>
+                <td>
+                    Global directory path where your TrenchBroom game configuration should be saved to. Consult the 
+                    <a href="https://trenchbroom.github.io/manual/latest/#game_configuration_files" target="_blank">TrenchBroom Manual's Game Configuration documentation</a> 
+                    for more information.
+                </td>
+            </tr>
+            <tr>
+                <td>Netradiant Custom Gamepacks Folder</td>
+                <td>String, Global Directory</td>
+                <td>
+                    Global directory path where your NetRadiant Custom gamepacks are saved. On Windows this is the <i>gamepacks</i> folder in your NetRadiant Custom installation.
+                </td>
+            </tr>
+            <tr>
+                <td>Map Editor Game Path</td>
+                <td>String, Global Directory</td>
+                <td>
+                    Global directory path to your mapping folder where all of your mapping assets exist. This is usually either your project folder or a subfolder within it.
+                </td>
+            </tr>
+            <tr>
+                <td>Game Path Models Folder</td>
+                <td>String</td>
+                <td>
+                    Relative directory path from your Map Editor Game Path to a subfolder containing any display models you might use for your map editor. 
+                    Currently only used by <a href="ref_trenchbroom_resources.html#ModelPoint" target="main">TrenchBroom FGD Model Point Class</a>.
+                </td>
+            </tr>
+        </table>
     </div>
+    <br><br><br>
 </body>
 </html>
