--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -54,9 +54,11 @@
 
         <p class="sidenav"><a href="ref_key_value_pairs.html" target="main">Entity Key Value Pairs</a></p>
         <p class="sidenav2">
+            <a href="ref_key_value_pairs.html#ModifyingNodesOnMapBuild" target="main">Modifying Nodes on Map Build</a><br>
             <a href="ref_key_value_pairs.html#PropertyTypes" target="main">Property Types</a><br>
             <a href="ref_key_value_pairs.html#Choices" target="main">Choices</a><br>
-            <a href="ref_key_value_pairs.html#BitFlags" target="main">Bit Flags</a>
+            <a href="ref_key_value_pairs.html#BitFlags" target="main">Bit Flags</a><br>
+            <a href="ref_key_value_pairs.html#AnEasierWay" target="main">There Has To Be An Easier Way</a>
         </p>
 
         <p class="sidenav"><a href="ref_trenchbroom_resources.html" target="main">TrenchBroom Resources</a></p>
