--- a/FuncGodot Manual/pages/ref_key_value_pairs.html
+++ b/FuncGodot Manual/pages/ref_key_value_pairs.html
@@ -102,7 +102,7 @@
         <p>
             FuncGodot supports many of the 
             <a href="https://docs.godotengine.org/en/stable/classes/class_%40globalscope.html#enum-globalscope-variant-type" target="_blank">Godot Variant types</a>. 
-            Consult the <a href="https://developer.valvesoftware.com/wiki/FGD#Keyvalues" target="_blank">Keyvalues section of the FGD page on the Valve Developer Wiki</a> 
+            Consult the <a href="https://developer.valvesoftware.com/wiki/FGD#key values" target="_blank">key values section of the FGD page on the Valve Developer Wiki</a> 
             for more information on FGD value types.
         </p>
         <br>
@@ -135,38 +135,38 @@
             <tr>
                 <td><a href="https://docs.godotengine.org/en/stable/classes/class_vector2.html" target="_blank">Vector2</a></td>
                 <td>string</td>
-                <td>Vector2 keyvalues are represented as string "X Y". Can accept floating point values.</td>
+                <td>Vector2 key values are represented as string "X Y". Can accept floating point values.</td>
             </tr>
             <tr>
                 <td><a href="https://docs.godotengine.org/en/stable/classes/class_vector2i.html" target="_blank">Vector2i</a></td>
                 <td>string</td>
-                <td>Vector2i keyvalues are represented as string "X Y". Can only accept integer values.</td>
+                <td>Vector2i key values are represented as string "X Y". Can only accept integer values.</td>
             </tr>
             <tr>
                 <td><a href="https://docs.godotengine.org/en/stable/classes/class_vector3.html" target="_blank">Vector3</a></td>
                 <td>string</td>
-                <td>Vector3 keyvalues are represented as string "X Y Z". Can accept floating point values.</td>
+                <td>Vector3 key values are represented as string "X Y Z". Can accept floating point values.</td>
             </tr>
             <tr>
                 <td><a href="https://docs.godotengine.org/en/stable/classes/class_vector3i.html" target="_blank">Vector3i</a></td>
                 <td>string</td>
-                <td>Vector3i keyvalues are represented as string "X Y Z". Can only accept integer values.</td>
+                <td>Vector3i key values are represented as string "X Y Z". Can only accept integer values.</td>
             </tr>
             <tr>
                 <td><a href="https://docs.godotengine.org/en/stable/classes/class_vector4.html" target="_blank">Vector4</a></td>
                 <td>string</td>
-                <td>Vector4 keyvalues are represented as string "W X Y Z". Can accept floating point values.</td>
+                <td>Vector4 key values are represented as string "W X Y Z". Can accept floating point values.</td>
             </tr>
             <tr>
                 <td><a href="https://docs.godotengine.org/en/stable/classes/class_vector4i.html" target="_blank">Vector4i</a></td>
                 <td>string</td>
-                <td>Vector4i keyvalues are represented as string "W X Y Z". Can only accept integer values.</td>
+                <td>Vector4i key values are represented as string "W X Y Z". Can only accept integer values.</td>
             </tr>
             <tr>
                 <td><a href="https://docs.godotengine.org/en/stable/classes/class_color.html" target="_blank">Color</a></td>
                 <td>string</td>
                 <td>
-                    Color keyvalues are represented as string "R G B". In some Map Editors they may offer a color picker.<br> 
+                    Color key values are represented as string "R G B". In some Map Editors they may offer a color picker.<br> 
                     Alpha is always set to 1.0. If alpha requires specification, use an additional float property.
                 </td>
             </tr>
@@ -174,7 +174,8 @@
                 <td><a href="https://docs.godotengine.org/en/stable/classes/class_dictionary.html" target="_blank">Dictionary</a></td>
                 <td>choices</td>
                 <td>
-                    Returns an <a href="https://docs.godotengine.org/en/stable/classes/class_int.html" target="_blank">Int</a> on map build.<br> 
+                    Returns an <a href="https://docs.godotengine.org/en/stable/classes/class_int.html" target="_blank">Int</a> or 
+                    <a href="https://docs.godotengine.org/en/stable/classes/class_string.html" target="_blank">String</a> on map build.<br> 
                     Dictionaries are a special property case. See the <a href="#Choices">Choices</a> section for more information.
                 </td>
             </tr>
@@ -183,7 +184,8 @@
                 <td>flags</td>
                 <td>
                     Returns an <a href="https://docs.godotengine.org/en/stable/classes/class_int.html" target="_blank">Int</a> on map build to be used as a bit mask.<br> 
-                    Somewhat complicated to set up and only flexibly supported in TrenchBroom. See the <a href="#BitFlags">Bit Flags</a> section for more information.
+                    Somewhat complicated to set up and only flexibly supported in TrenchBroom.<br> 
+                    See the <a href="#BitFlags">Bit Flags</a> section for more information.
                 </td>
             </tr>
         </table>
@@ -191,7 +193,7 @@
 
         <h2 id="Choices">Choices</h2>
         <p>
-            The <b>choices</b> keyvalue type allows you to open a dropdown menu of predefined options in your map editor. They are defined in Godot by choosing 
+            The <b>choices</b> key value type allows you to open a dropdown menu of predefined options in your map editor. They are defined in Godot by choosing 
             a value type of dictionary, with each key being the option text and each value being the property value. Keys are always Strings, but values can be 
             either Int or String.
         </p>
@@ -205,7 +207,7 @@
         <p align="center"><img src="../images/ref_kvp_choices2.png"></p>
 
         <blockquote><i>
-            NOTE: While Bool types always generate a choices keyvalue type, you don't need to set them up any differently than any other property. 
+            NOTE: While Bool types always generate a choices key value type, you don't need to set them up any differently than any other property. 
             FuncGodot will automatically format Bool types for you on FGD export.
         </i></blockquote>
         <br>
@@ -241,12 +243,7 @@
             Just make sure each flags property applied to an entity has a unique bit value and expect FuncGodot to build it as a compiled <i>spawnflags</i> bitmask.
         </p>
         <p align="center"><img src="../images/ref_kvp_bitflags2.png"></p>
-        <br>
-
-        <h2 id="AnEasierWay">There Has To Be An Easier Way</h2>
-        <p>
-            
-        </p>
     </div>
+    <br><br><br>
 </body>
 </html>
