--- a/FuncGodot Manual/pages/ref_fgd_resources.html
+++ b/FuncGodot Manual/pages/ref_fgd_resources.html
@@ -17,7 +17,7 @@
             in a <a href="ref_func_godot_map.html" target="main">FuncGodotMap</a> node.
         </p>
         <br>
-        <table>
+        <table class="props">
             <tr class="header">
                 <td>Property</td>
                 <td>Type</td>
@@ -70,7 +70,7 @@
         <p><img src="../images/ref_fgd_entity.png"></p>
         <p>Base entity definition class. Not to be used directly, use <i>FuncGodotFGDBaseClass</i>, <i>FuncGodotFGDSolidClass</i>, or <i>FuncGodotFGDPointClass</i> instead.</p>
         <br>
-        <table>
+        <table class="props">
             <tr class="header">
                 <td>Property</td>
                 <td>Type</td>
@@ -157,7 +157,7 @@
             according to Collision Build settings.    
         </p>
         <br>
-        <table>
+        <table class="props">
             <tr class="header">
                 <td>Property</td>
                 <td>Type</td>
@@ -271,7 +271,7 @@
             <i>Scene File</i> property to tell a <i>FuncGodotMap</i> what to generate on map build.
         </p>
         <br>
-        <table>
+        <table class="props">
             <tr class="header">
                 <td>Property</td>
                 <td>Type</td>
