--- a/FuncGodot Manual/pages/ref_key_value_pairs.html
+++ b/FuncGodot Manual/pages/ref_key_value_pairs.html
@@ -106,7 +106,7 @@
             for more information on FGD value types.
         </p>
         <br>
-        <table>
+        <table class="props">
             <tr class="header">
                 <td>Godot Variant Type</td>
                 <td>FGD Value Type</td>
