--- a/FuncGodot Manual/pages/ref_project_config.html
+++ b/FuncGodot Manual/pages/ref_project_config.html
@@ -18,7 +18,7 @@
         </p>
         <br>
 
-        <table>
+        <table class="props">
             <tr class="header">
                 <td>Property</td>
                 <td>Type</td>
