--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -77,14 +77,14 @@
         <p class="sidenav2">
             <a href="ref_func_godot_map.html#MapSettings" target="main">FuncGodot Map Settings</a>
         </p>
-        <h3 class="sidenav">Core Classes</h3>
+        <!--<h3 class="sidenav">Core Classes</h3>
         <p class="sidenav">
             <a href="core_func_godot.html" target="main">FuncGodot</a><br>
             <a href="core_map_data.html" target="main">Map Data</a><br>
             <a href="core_map_parser.html" target="main">Map Parser</a><br>
             <a href="core_geo_generator.html" target="main">Geo Generator</a><br>
             <a href="core_surface_gatherer.html" target="main">Surface Gatherer</a>
-        </p>
+        </p>-->
         <h3 class="sidenav">Additional Learning</h3>
         <p class="sidenav"><a href="helpful_links.html" target="main">Helpful Links</a></p>
         <p class="sidenav2">
