--- a/FuncGodot Manual/pages/sidenav.html
+++ b/FuncGodot Manual/pages/sidenav.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-    <!-- Sidebar Navigation Begin -->
     <div class="sidenav">
-        <a href="start.html" target="main">What <i>IS</i> FuncGodot?</a><br>
+        <p class="sidenav"><a href="start.html" target="main">What <i>IS</i> FuncGodot?</a></p>
+        <!--<p class="sidenav2"><a href="start.html#Credits" target="main">Who <i>MADE</i> FuncGodot?</a></p>-->
         <h3 class="sidenav">Getting Started</h3>
         <p class="sidenav">
             <a href="guide_install.html" target="main">Installing FuncGodot</a><br>
@@ -85,6 +85,12 @@
             <a href="core_geo_generator.html" target="main">Geo Generator</a><br>
             <a href="core_surface_gatherer.html" target="main">Surface Gatherer</a>
         </p>-->
+        <h3 class="sidenav">Tips and Tricks</h3>
+        <p class="sidenav">
+            <a href="tips_naming.html" target="main">Naming Patterns</a><br>
+            <a href="tips_worldspawn.html" target="main">Why Not Worldspawn?</a><br>
+            <a href="tips_multiple_models.html" target="main">Conditional Models in TrenchBroom</a>
+        </p>
         <h3 class="sidenav">Additional Learning</h3>
         <p class="sidenav"><a href="helpful_links.html" target="main">Helpful Links</a></p>
         <p class="sidenav2">
@@ -98,6 +104,5 @@
         </p><br>
         <a href="#"><b>Join the FuncGodot Discord!</b></a>
     </div>
-    <!-- Sidebar Navigation End -->
 </body>
 </html>
