--- a/FuncGodot Manual/pages/start.html
+++ b/FuncGodot Manual/pages/start.html
@@ -40,6 +40,22 @@
             This manual assumes some familiarity with the Godot Engine and your map editor of choice. This manual will only cover them insofar as how they relate to 
             the FuncGodot work flow.
         </p>
+        <br>
+
+        <h1 style="text-align:center;"><img src="../images/godambler.svg" alt="Godambler" height="128"><br>Who <i>MADE</i> FuncGodot?</h1>
+        <p>
+            FuncGodot was created by 
+            <a href="https://github.com/EMBYRDEV" target="_blank"><b>Hannah "Embyr" Crawford</b></a>, 
+            <a href="https://github.com/DeerTears" target="_blank"><b>Emberlynn Bland</b></a>, and 
+            <a href="https://github.com/RhapsodyInGeek" target="_blank"><b>Tim "RhapsodyInGeek" Maccabe</b></a>, 
+            reworked from the <a href="https://github.com/QodotPlugin/Qodot/tree/main" target="_blank">Godot 4 port of Qodot</a> by Embyr, 
+            with contributions from members of the FuncGodot and Qodot Communities.
+        </p>
+        <p>
+            Both plugins are based on the original <a href="https://github.com/QodotPlugin/qodot-plugin/" target="_blank">Qodot for Godot 3.5</a> created by 
+            <a href="https://github.com/Shfty" target="_blank"><b>Shifty</b></a>.
+        </p>
     </div>
+    <br><br><br>
 </body>
 </html>
